styles.css
/* Google fonts styling */

/* .merriweather-<uniquifier> {
  font-family: "Merriweather", serif;
  font-optical-sizing: auto;
  font-weight: <weight>;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
}
.inter-<uniquifier> {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-weight: <weight>;
  font-style: normal;
} */


/* Custom CSS */

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
.header{
    min-height: 100vh;
    width: 100%;
    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/background1.jpeg);
    background-position: center;
    background-size: cover;
    position: relative;
}
nav{
    display: flex;
    padding: 2% 6%;
    justify-content: space-between;
    align-items: center;
}
nav img{
    width: 100px;
}
.nav-links{
    flex: 1;
    text-align: right;
}
.nav-links ul li{
    list-style: none;
    display: inline-block;
    padding: 8px 12px;
    position: relative;
}
.nav-links ul li a{
    color: #ffffff;
    text-decoration: none;
    font-size: 16px;
    font-family: "Inter", sans-serif;
    /* font-family: "Merriweather", serif; */
    position: relative;
}
.nav-links ul li a::after{
    content: '';
    width: 0%;
    height: 2px;
    background: #ea580c;
    display: block;
    margin: auto;
    transition: 0.3s;
    position: absolute;
    bottom: -2px;
    left: 0;
}
.nav-links ul li a:hover::after{
    width: 100%;
}
.nav-links ul li a.active{
    color: #ea580c;
}
.nav-links ul li a.active::after{
    width: 100%;
}
.text-box{
    width: 90%;
    color: #ffffff;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    text-align: center;
}
.text-box h1{
    font-size: 62px;
    color: #ffffff;
}
.text-box p{
    margin: 10px 0 40px;
    font-size: 14px;
    color: #ffffff;
}
.hero-btn{
    display: inline-block;
    text-decoration: none;
    color: #ffffff;
    border: 1px solid #e2e8f0;
    padding: 12px 34px;
    font-size: 14px;
    background: #f97316;
    position: relative;
    cursor: pointer;
}
.hero-btn:hover{
    background: #ea580c;
    transition: 0.025s;
}
nav .svg-inline--fa{
    display: none;
}

/* About Us */

.about-us{
    width: 80%;
    margin: auto;
    text-align: center;
    padding: 80px 0;
}
h1{
    font-size: 36px;
    font-weight: 600;
    color: #2563eb;
    font-family: "Merriweather", serif;
    text-align: center;

}
p{
    color: #111827;
    font-size: 14px;
    font-weight: 300;
    line-height: 22px;
    padding: 10px;
    font-family: "Inter", sans-serif;

}
h5{
    font-family: "Inter", sans-serif;
    font-size: 14px;
    color: #111827;


}
.sub-header h1{
    color: #ffffff;
}

/* Why choose us */
.why-choose-us{
    width: 80%;
    margin: auto;
    text-align: center;
    padding: 80px 0;
}
.why-choose-us-col{
    flex-basis: 44%;
    border-radius: 10px;
    margin-bottom: 5%;
    text-align: left;
}
.why-choose-us-col p{
    padding: 0;
}
.why-choose-us-col h3{
    margin-top: 16px;
    margin-bottom: 15px;
    text-align: center;
    color: #2563eb;
}
.icon {
    width: 80px;
    height: 80px;
    fill: #f97316;
    display: block;
    margin: 0 auto;
    background-color: #e2e8f0;
    border-radius: 50%;
        display: flex;
    align-items: center;
    justify-content: center;

}
.logo {
    width: 90px;
    height: 90px;
    fill: #f97316;
    display: block;
    margin: 0 auto;
    /* background-color: #e2e8f0; */
    /* border-radius: 50%; */
        display: flex;
    align-items: center;
    justify-content: center;

}


/* Services */

.services{
    width: 80%;
    margin: auto;
    text-align: center;
    padding: 80px 0;
}
.background{
    background-color: #f8fafc;
}

.row{
    margin-top: 5%;
    display: flex;
    justify-content: space-between;
}
.service-col{
    flex-basis: 31%;
    background: #ffffff;
    border-radius: 10px;
    margin-bottom: 5%;
    padding: 20px 12px;
    box-sizing: border-box;
    transition: 0.025s;
}
h3{
    text-align: center;
    font-weight: 600;
    margin: 10px 0;
    color: #f97316;
}
.service-col{
    box-shadow: 0 0 20px 0 rgba(0,0,0,0.2);
}

.sub-header{
    height: 50vh;
    width: 100%;
    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/background.jpeg);
    background-position: center;
    background-size: cover;
    text-align: center;
    color: #ffffff;
}


.about-page{
    width: 90%;
    margin: auto;
    padding: 80px 0;
    text-align: start;
}
.about-col{
    flex-basis: 48%;
    padding: 30px 2px;
}
.about-col img{
    width: 90%;
}
.about-col h1{
    padding-top: 0;
}
.about-col p{
    padding: 15px 0 25px;
}
.consult-box{
    border: 1px solid #e2e8f0;
    padding: 10px 20px;
} 
.consult-box h3{
   text-align: top; 
   flex-basis: 48%;
}
.consult-form input, .consult-form textarea{
    width: 100%;
    padding: 10px;
    margin: 15px 0;
    box-sizing: border-box;
    border: none;
    outline: none;
    background: #ffffff;
}
.consult-form button{
    margin: 10px 0;
}
.overview{
    background: #f8fafc;
}
/* Location page */

.location{
    width: 80%;
    margin: auto;
    padding: 80px 0;
}
.location iframe{
    width: 100%;
}
.contact-us{
    width: 80%;
    margin: auto;
    padding: 80px 0;
}

.contact-col{
    flex-basis: 48%;
    margin-bottom: 30px;
}

.contact-item{
    display: flex;
    align-items: center;
    margin-bottom: 40px;
}

.contact-item .svg-inline--fa{

    font-size: 25px;
    color: #f97316;
    margin: 10px 30px 10px 10px;
}

.contact-item p{
    padding: 0;
}

.contact-item h5{
    font-size: 20px;
    margin-bottom: 5px;
    color: #64748b;
    font-weight: 400;
}

.contact-col input,
.contact-col textarea{
    width: 100%;
    padding: 15px;
    margin-bottom: 17px;
    outline: none;
    border: 1px solid #e2e8f0;
    box-sizing: border-box;
}
/* ... */

